src/test/ui/feature-gates/feature-gate-may-dangle.stderr
error[E0658]: may_dangle has unstable semantics and may be removed in the future (see issue #34761)
  --> $DIR/feature-gate-may-dangle.rs:16:6
   |
LL | impl<#[may_dangle] A> Drop for Pt<A> {
   |      ^^^^^^^^^^^^^
   |
   = help: add #![feature(dropck_eyepatch)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
